style minor spacing fix;

--- a/chamados-app/src/pages/Dashboard/index.css
+++ b/chamados-app/src/pages/Dashboard/index.css
@@ -3,6 +3,4 @@
     flex-direction: column;
     justify-content: flex-start;
     gap: 1rem;
-
-    padding: 1.62rem;
 }
