--- a/chamados-app/src/pages/Profile/index.css
+++ b/chamados-app/src/pages/Profile/index.css
@@ -5,7 +5,7 @@
 
     gap: 1rem;
 
-    padding: 1rem 2rem;
+    padding: 2rem 4rem;
 }
 
 .form,
@@ -18,8 +18,15 @@
     align-items: flex-start;
 }
 
+.form {
+    padding: 4rem;
+}
+
 .profile-avatar__sect {
     position: relative;
+
+    height: 200px;
+    width: 200px;
 }
 
 .profile-avatar__icon {
@@ -61,8 +68,11 @@
     width: 200px;
 }
 
-.inp__sect {
+.inp__sect:not(.profile-avatar__sect) {
     gap: .5rem;
+
+    width: 80%;
+    min-width: 300px;
 }
 
 .inp__lbl {
@@ -73,9 +83,12 @@
     background-color: var(--color-plain-white);
     border: 0;
     border-radius: .25rem;
-    font-size: 1rem;
+    color: var(--color-dark-blue);
+    font-size: 1.2rem;
 
-    padding: .5rem 1rem;
+    width: 100%;
+
+    padding: 1rem 2rem;
 }
 
 .form__btn {
